fixes and frontend
